// Fitxer de definici√≥ del missatge base de totes les entitats.
// createdAt: 24-09-29 dg 

syntax = "proto3";

package proto;

import "gbl_timestamp.proto";

option go_package = "./";

// Camps clau i de seguiment.
message ModelEntity {
  optional uint32    local_id = 1;
  optional uint32    id = 2;
  uint32             created_by = 3;
  Timestamp          created_at = 4;
  optional uint32    updated_by = 5;
  optional Timestamp updated_at = 6;
  bool               is_new = 7;
  bool               is_updated = 8;
  bool               is_deleted = 9;
}